--- a/services.html
+++ b/services.html
@@ -38,19 +38,6 @@
 
 <body>
 
-  <!-- ======= Top Bar ======= -->
-  <section id="topbar" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
-      <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="solsticizng@gmail.com">solsticizng@gmail.com</a></i>
-      </div>
-      <div class="social-links d-none d-md-flex align-items-center">
-        <a href="https://www.facebook.com/profile.php?id=100088576773337" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.youtube.com/@solstalks" class="Youtube"><i class="bi bi-youtube"></i></a>
-      </div>
-    </div>
-  </section>
-
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
@@ -64,10 +51,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="about.html">About</a></li>
-          <li><a href="services.html">Stream</a></li>
+          <li><a href="services.html">About</a></li>
           <li><a href="testimonials.html">Team</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Plans</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -102,29 +87,29 @@
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-bell-fill"></i></div>
-              <h4 class="title"><a href="">What is Streaming?</a></h4>
-              <p class="description">Streaming is a technology used to deliver content to computers and mobile devices over the internet without having to download it.</p>
+              <h4 class="title"><a href="">Focus of Content</a></h4>
+              <p class="description">Our team chose to Focus about The Dilemmas of a Teenager. </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bi bi-bar-chart-steps"></i></div>
-              <h4 class="title"><a href="">Types of Streaming Content</a></h4>
-              <p class="description">The streaming content provides the viewers what type of content they are watching and such, some of there are Movies, TV Shows, Music Videos, and Podcasts.</p>
+              <div class="icon"><i class="bi bi-clipboard"></i></div>
+              <h4 class="title"><a href="">Objective</a></h4>
+              <p class="description">Our Team hopes to educate and learn more information about our chosen content while also explaining the effects of these problems why are they important. </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="icon"><i class="bi bi-browser-edge"></i></div>
-              <h4 class="title"><a href="">Platforms Used for Streaming</a></h4>
-              <p class="description">The platforms used for streamind additionaly, this is where they stream the content some of the platforms are Hulu, Netflix, Facebook, YouTube, Twitch and Spotify.</p>
+              <div class="icon"><i class="bi bi-images"></i></div>
+              <h4 class="title"><a href="">Streaming Platform</a></h4>
+              <p class="description">Our Team chose to stream on Youtube to gain many people as possible and for easy access as a lot of people are know to use Youtube itself. </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="icon"><i class="bi bi-display"></i></div>
-              <h4 class="title"><a href="">Types of Broadcasting Software</a></h4>
-              <p class="description">A broadcasting software is where your stream will be launched to show the audience, some example of a broadcasting software are OBS Studio, vMix, Streamlabs OBS, Xsplit Broadcaster etc.</p>
+              <div class="icon"><i class="bi bi-folder"></i></div>
+              <h4 class="title"><a href="">What does a Dilemma of a Teenagers Define?</a></h4>
+              <p class="description">The Dilemmas of a Teenager describes the various contemporary issues that teenagers nowadays must deal with, they cover various issues and effects. </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
@@ -223,11 +208,11 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Flattern</h3>
+            <h3>Solstice</h3>
             <p>
               H4Q5+684, Brgy Sto. Domigo<br>
               Ortigas Ave Ext, Cainta Rizal<br>
-              Philiippines <br><br>
+              Philiippines<br><br>
               <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:solsticizng@gmail.com">solsticizng@gmail.com</a></i>
             </p>
           </div>
@@ -243,9 +228,17 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flattern-multipurpose-bootstrap-template/ -->
-        </div>
-      </div>
-    </div>
+
+<div class="container d-md-flex py-4">
+
+  <div class="social-links text-center text-md-right pt-3 pt-md-0">
+    <a href="https://www.facebook.com/profile.php?id=100088576773337" class="facebook"><i class="bx bxl-facebook"></i></a>
+    <a href="https://www.youtube.com/@solstalks" class="Youtube"><i class="bx bxl-youtube"></i></a>
+    <a href="https://github.com/Solsticiez" class="linkedin"><i class="bi bi-github"></i></a>
+  </div>
+</div>
+</footer>
+    
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
