--- a/about.html
+++ b/about.html
@@ -64,10 +64,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="about.html">About</a></li>
-          <li><a href="services.html">Stream</a></li>
+          <li><a href="services.html">About</a></li>
           <li><a href="testimonials.html">Team</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Plans</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
