--- a/blog-single.html
+++ b/blog-single.html
@@ -38,19 +38,6 @@
 
 <body>
 
-  <!-- ======= Top Bar ======= -->
-  <section id="topbar" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
-      <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:solsticizng@gmail.com">solsticizng@gmail.com</a></i>
-      </div>
-      <div class="social-links d-none d-md-flex align-items-center">
-        <a href="https://www.facebook.com/profile.php?id=100088576773337" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.youtube.com/@solstalks" class="Youtube"><i class="bi bi-youtube"></i></a>
-      </div>
-    </div>
-  </section>
-
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
@@ -299,9 +286,17 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flattern-multipurpose-bootstrap-template/ -->
-        </div>
-      </div>
-    </div>
+
+<div class="container d-md-flex py-4">
+
+  <div class="social-links text-center text-md-right pt-3 pt-md-0">
+    <a href="https://www.facebook.com/profile.php?id=100088576773337" class="facebook"><i class="bx bxl-facebook"></i></a>
+    <a href="https://www.youtube.com/@solstalks" class="Youtube"><i class="bx bxl-youtube"></i></a>
+    <a href="https://github.com/Solsticiez" class="linkedin"><i class="bi bi-github"></i></a>
+  </div>
+</div>
+</footer>
+    
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
