--- a/services.html
+++ b/services.html
@@ -198,6 +198,112 @@
       </div>
     </section><!-- End Features Section -->
 
+   <!-- ======= Our Team Section ======= -->
+   <section id="team" class="team section-bg">
+    <div class="container">
+
+      <div class="section-title" data-aos="fade-up">
+        <h2>Our <strong>Team</strong></h2>
+        <p>We can view the names and social media handles of each team member in this section of the website.</p>
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up">
+            <div class="member-img">
+              <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href="https://contacts.google.com/ap.samanthanicole.sumperos@apecschools.edu.ph"><i class="bi bi-envelope"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>Samantha Nicole</h4>
+              <span>Team Leader</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up" data-aos-delay="100">
+            <div class="member-img">
+              <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href="https://contacts.google.com/ap.ingridtherese.noma@apecschools.edu.ph"><i class="bi bi-envelope"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>Ingrid</h4>
+              <span>Technical</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up" data-aos-delay="200">
+            <div class="member-img">
+              <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href="">https://contacts.google.com/ap.reemaangela.buenaventura@apecschools.edu.ph<i class="bi bi-envelope"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>Rina</h4>
+              <span>Member</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up" data-aos-delay="300">
+            <div class="member-img">
+              <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href="">https://contacts.google.com/ap.keishachloey.florendo@apecschools.edu.ph<i class="bi bi-envelope"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>Keisha</h4>
+              <span>Member</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up" data-aos-delay="300">
+            <div class="member-img">
+              <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href="">https://contacts.google.com/ap.sofiahcassandra.cacabelos@apecschools.edu.ph<i class="bi bi-envelope"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>Sofiah Cassandra</h4>
+              <span>Member</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="member" data-aos="fade-up" data-aos-delay="300">
+            <div class="member-img">
+              <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href="">https://contacts.google.com/ap.charminekimberly.vinas@apecschools.edu.ph<i class="bi bi-envelope"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>Charmaine</h4>
+              <span>Organizer</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Our Team Section -->
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
