--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,6 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
-
       <div class="logo">
         <h1 class="text-light"><a href="index.html">Solstice</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
@@ -50,11 +49,16 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">About</a></li>
-          <li><a href="testimonials.html">Team</a></li>
-          <li><a href="blog.html">Plans</a></li>
-          <li><a class="active" href="contact.html">Contact</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="services.html">About Us</a></li>
+          <li class="dropdown"><a href="#"><span>Our Events</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="blog.html">Our Content</a></li>
+          <li><a href="about.html">Promotional Materials</a></li>
+        </ul>
+      </li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -80,10 +84,6 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Contact Section ======= -->
-    <div class="map-section">
-      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.194098497735!2d121.10613711492326!3d14.588013089810469!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c7895cfc0851%3A0x32b881b76adc4e6d!2sAPEC%20Schools%20-%20Ortigas%20Extension!5e0!3m2!1sen!2sph!4v1670606906624!5m2!1sen!2sph" frameborder="0" allowfullscreen></iframe>
-    </div>
-
     <section id="contact" class="contact">
       <div class="container">
 
