--- a/services.html
+++ b/services.html
@@ -41,7 +41,6 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
-
       <div class="logo">
         <h1 class="text-light"><a href="index.html">Solstice</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
@@ -50,10 +49,15 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">About</a></li>
-          <li><a href="testimonials.html">Team</a></li>
-          <li><a href="blog.html">Plans</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="services.html">About Us</a></li>
+          <li class="dropdown"><a href="#"><span>Our Events</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="blog.html">Our Content</a></li>
+          <li><a href="about.html">Promotional Materials</a></li>
+        </ul>
+      </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -220,6 +224,7 @@
             <div class="member-info">
               <h4>Samantha Nicole</h4>
               <span>Team Leader</span>
+              <p> Good day! I am Ms. Samantha the appointed leader of the Team and the one who supervises them. </p>
             </div>
           </div>
         </div>
@@ -235,6 +240,7 @@
             <div class="member-info">
               <h4>Ingrid</h4>
               <span>Technical</span>
+              <p>Hello Everyone! My name is Ingrid from Group 7 B09-10-S2-1. I am the Technical of the Group and handles all the technial needed. </p>
             </div>
           </div>
         </div>
@@ -244,12 +250,13 @@
             <div class="member-img">
               <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="">https://contacts.google.com/ap.reemaangela.buenaventura@apecschools.edu.ph<i class="bi bi-envelope"></i></a>
+                <a href="https://contacts.google.com/ap.reemaangela.buenaventura@apecschools.edu.ph"><i class="bi bi-envelope"></i></a>
               </div>
             </div>
             <div class="member-info">
               <h4>Rina</h4>
               <span>Member</span>
+              <p>Hello! I'm Rina, Im 15 years old, My hobbies are listening to music, reading mangas and playing games. </p>
             </div>
           </div>
         </div>
@@ -259,12 +266,13 @@
             <div class="member-img">
               <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="">https://contacts.google.com/ap.keishachloey.florendo@apecschools.edu.ph<i class="bi bi-envelope"></i></a>
+                <a href="https://contacts.google.com/ap.keishachloey.florendo@apecschools.edu.ph"><i class="bi bi-envelope"></i></a>
               </div>
             </div>
             <div class="member-info">
               <h4>Keisha</h4>
               <span>Member</span>
+              <p>It's my pleasure to introduce myself as Keisha. I'm a 16-year-old who enjoys reading and watching Marvel movies. My willingness to take on new tasks and pursue excellence is one of my strengths. </p>
             </div>
           </div>
         </div>
@@ -274,12 +282,13 @@
             <div class="member-img">
               <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="">https://contacts.google.com/ap.sofiahcassandra.cacabelos@apecschools.edu.ph<i class="bi bi-envelope"></i></a>
+                <a href="https://contacts.google.com/ap.sofiahcassandra.cacabelos@apecschools.edu.ph"><i class="bi bi-envelope"></i></a>
               </div>
             </div>
             <div class="member-info">
               <h4>Sofiah Cassandra</h4>
               <span>Member</span>
+              <p> Hello. My name is Sofiah Cassandra. I'm Grade 10 student in APEC Schools and my hobbies are listening to music and writing. </p>
             </div>
           </div>
         </div>
@@ -289,12 +298,13 @@
             <div class="member-img">
               <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
               <div class="social">
-                <a href="">https://contacts.google.com/ap.charminekimberly.vinas@apecschools.edu.ph<i class="bi bi-envelope"></i></a>
+                <a href="https://contacts.google.com/ap.charminekimberly.vinas@apecschools.edu.ph"><i class="bi bi-envelope"></i></a>
               </div>
             </div>
             <div class="member-info">
               <h4>Charmaine</h4>
               <span>Organizer</span>
+              <p> Hello, I am Charmine Viñas, a member of Solstice and the organizer of the group.</p>
             </div>
           </div>
         </div>
