--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -41,7 +41,6 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
-
       <div class="logo">
         <h1 class="text-light"><a href="index.html">Solstice</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
@@ -50,15 +49,20 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">About</a></li>
-          <li><a href="testimonials.html">Team</a></li>
-          <li><a href="blog.html">Plans</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="services.html">About Us</a></li>
+          <li class="dropdown"><a href="#"><span>Our Events</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="blog.html">Our Content</a></li>
+          <li><a href="about.html">Promotional Materials</a></li>
+        </ul>
+      </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
-      <!-- .navbar -->
+      </nav><!-- .navbar -->
+
     </div>
   </header><!-- End Header -->
 
