--- a/blog.html
+++ b/blog.html
@@ -50,15 +50,15 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="blog.html">Content</a></li>
           <li><a href="services.html">About Us</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="#"><span>Our Events</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="blog.html">Our Content</a></li>
           <li><a href="about.html">Promotional Materials</a></li>
         </ul>
       </li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -73,10 +73,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Plans</h2>
+          <h2>Content</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Plans</li>
+            <li>Content</li>
           </ol>
         </div>
 
