--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,7 @@
             <ul>
               <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="about.html">Promotional Materials</a></li>
+          <li><a href="pricing.html">Streaming Outline</a></li>
         </ul>
       </li>
         </ul>
