--- a/about.html
+++ b/about.html
@@ -59,6 +59,7 @@
             <ul>
               <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="about.html">Promotional Materials</a></li>
+          <li><a href="pricing.html">Streaming Outline</a></li>
         </ul>
       </li>
         </ul>
@@ -75,7 +76,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Promotional Materials and Outline</h2>
+          <h2>Promotional Materials</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Promotional Materials</li>
@@ -143,91 +144,6 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2><strong>Outline</strong> of Stream</h2>
-
-          <p>As you can see in the table below, this is our schedule to follow during our stream to avoid any
-            misorganized area during the stream.</p>
-
-          <table>
-            <tr>
-              <th>Topic</th>
-              <th>Activity</th>
-              <th>Time Allotment (mins)</th>
-              <th>Screen</th>
-              <th>Audio</th>
-            </tr>
-            <tr>
-              <td>Introduction</td>
-              <td>Introduction of the group</td>
-              <td>3 minutes</td>
-              <td>Video</td>
-              <td>Video/Audio</td>
-            </tr>
-            <tr>
-              <td>Content of our Stream</td>
-              <td>Introduction of the Topic and brief overall of our content</td>
-              <td>10 minutes</td>
-              <td>Facecam</td>
-              <td>Video/Audio</td>
-            </tr>
-            <tr>
-              <td>Roots of Dilemma of Teenagers</td>
-              <td>Discussion of the Roots and Problems of Teenagers</td>
-              <td>5 minutes</td>
-              <td>Facecam</td>
-              <td>Video/Audio</td>
-            </tr>
-            <tr>
-              <td>Effects of Dilemmas of Teenagers</td>
-              <td>Disucssion about the effects while also explaining how this affects Teenagers</td>
-              <td>10 minutes</td>
-              <td>Facecam</td>
-              <td>Video/Audio</td>
-            </tr>
-            <tr>
-              <td>Types of Dilemmas of a Teenager</td>
-              <td>Discussion about the different types of Dilemmas of a Teenager</td>
-              <td>5 minutes</td>
-              <td>Facecam</td>
-              <td>Video/Audio</td>
-            </tr>
-            <tr>
-              <td>Commercial Break</td>
-              <td>Playing of Music</td>
-              <td>5 minutes</td>
-              <td>Picture</td>
-              <td>Music Audio</td>
-            </tr>
-            <tr>
-              <td>Real life and Online Experiences based on their Problems and Experiences</td>
-              <td>Discussion and sharing of how these problems affect them Real Life and Online and their difference
-              </td>
-              <td>12 minutes</td>
-              <td>Facecam</td>
-              <td>Video/Audio</td>
-              </td>
-            <tr>
-              <td>Summary</td>
-              <td>Summarization of Important Details</td>
-              <td>10 minutes</td>
-              <td>Facecam</td>
-              <td>Video/Audio</td>
-              </td>
-            <tr>
-              <td>Q&A</td>
-              <td>Q&A Portion</td>
-              <td>10 minutes</td>
-              <td>Facecam</td>
-              <td>Video/Audio</td>
-              </td>
-            <tr>
-              <td>Outroduction</td>
-              <td>Giving thanks to the viewers and Outro</td>
-              <td>2 minutes</td>
-              <td>Picture</td>
-              <td>Video/Audio</td>
-
-          </table>
           <br>
           <h2>Our <strong>Gratitude</strong></h2>
           <p>Our team believes that the information and other materials on this website has improved your understanding
