--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pricing - Flattern Bootstrap Template</title>
+  <title>Solstice</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,65 +38,35 @@
 
 <body>
 
-  <!-- ======= Top Bar ======= -->
-  <section id="topbar" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
-      <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
-      </div>
-      <div class="social-links d-none d-md-flex align-items-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-      </div>
-    </div>
-  </section>
-
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
-
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">Flattern</a></h1>
+        <h1 class="text-light"><a href="index.html">Solstice</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="testimonials.html">Testimonials</a></li>
-          <li><a class="active" href="pricing.html">Pricing</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="blog.html">Content</a></li>
+          <li><a href="services.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li class="dropdown"><a href="#"><span>Our Events</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="about.html">Promotional Materials</a></li>
+          <li><a href="pricing.html">Streaming Outline</a></li>
+        </ul>
+      </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
+
 
   <main id="main">
 
@@ -105,10 +75,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Pricing</h2>
+          <h2>Stream Outline</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Pricing</li>
+            <li>Stream Outline</li>
           </ol>
         </div>
 
@@ -123,56 +93,43 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="box" data-aos="fade-right">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h3>Data Privacy Act</h3>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>The Team and the audience would both profit from the use of this Law. Personal information would only be
+                  shared with other people under strict confidentiality agreements with their consent. This is applied to for both
+                  viewers and the Team.</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="fade-up">
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h3>What is the purpose of a Streaming Outline?</h3>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>The stream is summarized so that viewers may understand what will happen throughout the stream and are informed
+                  prior to the main feed. This support also gains from having carefully built and ordered concepts that move
+                  sequentially and thoughtfully.</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-left">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h3>Interactivity</h3>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Asking individuals for their ideas, experiences, and other information would be one way to interact with them
+                  during the stream while also acknowledging them in the chat as we carry out the plan.</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
-
-        </div>
+          
+          </div>
 
       </div>
     </section><!-- End Pricing Section -->
@@ -182,9 +139,89 @@
       <div class="container">
 
         <div class="text-center">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <h2><strong>Outline</strong> of the Stream</h2>
+
+          <table>
+            <tr>
+              <th>Topic</th>
+              <th>Activity</th>
+              <th>Time Allotment (mins)</th>
+              <th>Screen</th>
+              <th>Audio</th>
+            </tr>
+            <tr>
+              <td>Introduction</td>
+              <td>Introduction of the group</td>
+              <td>3 minutes</td>
+              <td>Video</td>
+              <td>Video/Audio</td>
+            </tr>
+            <tr>
+              <td>Content of our Stream</td>
+              <td>Introduction of the Topic and brief overall of our content</td>
+              <td>10 minutes</td>
+              <td>Facecam</td>
+              <td>Video/Audio</td>
+            </tr>
+            <tr>
+              <td>Roots of Dilemma of Teenagers</td>
+              <td>Discussion of the Roots and Problems of Teenagers</td>
+              <td>5 minutes</td>
+              <td>Facecam</td>
+              <td>Video/Audio</td>
+            </tr>
+            <tr>
+              <td>Effects of Dilemmas of Teenagers</td>
+              <td>Disucssion about the effects while also explaining how this affects Teenagers</td>
+              <td>10 minutes</td>
+              <td>Facecam</td>
+              <td>Video/Audio</td>
+            </tr>
+            <tr>
+              <td>Types of Dilemmas of a Teenager</td>
+              <td>Discussion about the different types of Dilemmas of a Teenager</td>
+              <td>5 minutes</td>
+              <td>Facecam</td>
+              <td>Video/Audio</td>
+            </tr>
+            <tr>
+              <td>Commercial Break</td>
+              <td>Playing of Music</td>
+              <td>5 minutes</td>
+              <td>Picture</td>
+              <td>Music Audio</td>
+            </tr>
+            <tr>
+              <td>Real life and Online Experiences based on their Problems and Experiences</td>
+              <td>Discussion and sharing of how these problems affect them Real Life and Online and their difference
+              </td>
+              <td>12 minutes</td>
+              <td>Facecam</td>
+              <td>Video/Audio</td>
+              </td>
+            <tr>
+              <td>Summary</td>
+              <td>Summarization of Important Details</td>
+              <td>10 minutes</td>
+              <td>Facecam</td>
+              <td>Video/Audio</td>
+              </td>
+            <tr>
+              <td>Q&A</td>
+              <td>Q&A Portion</td>
+              <td>10 minutes</td>
+              <td>Facecam</td>
+              <td>Video/Audio</td>
+              </td>
+            <tr>
+              <td>Outroduction</td>
+              <td>Giving thanks to the viewers and Outro</td>
+              <td>2 minutes</td>
+              <td>Picture</td>
+              <td>Video/Audio</td>
+
+          </table>
+          <br>
         </div>
 
       </div>
@@ -200,72 +237,37 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Flattern</h3>
+            <h3>Solstice</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              H4Q5+684, Brgy Sto. Domigo<br>
+              Ortigas Ave Ext, Cainta Rizal<br>
+              Philiippines<br><br>
+              <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:solsticizng@gmail.com">solsticizng@gmail.com</a></i>
             </p>
           </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-
-        </div>
-      </div>
-    </div>
 
     <div class="container d-md-flex py-4">
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Flattern</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Solstice</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flattern-multipurpose-bootstrap-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-      </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
-    </div>
+
+<div class="container d-md-flex py-4">
+
+  <div class="social-links text-center text-md-right pt-3 pt-md-0">
+    <a href="https://www.facebook.com/profile.php?id=100088576773337" class="facebook"><i class="bx bxl-facebook"></i></a>
+    <a href="https://www.youtube.com/@solstalks" class="Youtube"><i class="bx bxl-youtube"></i></a>
+    <a href="https://github.com/Solsticiez" class="linkedin"><i class="bi bi-github"></i></a>
+  </div>
+</div>
+</footer>
+    
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
