--- a/pricing.html
+++ b/pricing.html
@@ -137,11 +137,10 @@
     <!-- ======= Cta Pricing Section ======= -->
     <section id="cta-pricing" class="cta-pricing">
       <div class="container">
-
         <div class="text-center">
+          <center><table class="center">
           <h2><strong>Outline</strong> of the Stream</h2>
-
-          <table>
+           
             <tr>
               <th>Topic</th>
               <th>Activity</th>
@@ -151,36 +150,37 @@
             </tr>
             <tr>
               <td>Introduction</td>
-              <td>Introduction of the group</td>
+              <td>Intermission</td>
+              <td>2 minutes</td>
+              <td>Picture</td>
+              <td>Video/Audio</td>
+            </tr>
+            <tr>
+              <td>Introduction</td>
+              <td>Introduction of the Group and Topic with hook and a mini-game</td>
               <td>3 minutes</td>
-              <td>Video</td>
+              <td>Facecam</td>
               <td>Video/Audio</td>
             </tr>
             <tr>
-              <td>Content of our Stream</td>
-              <td>Introduction of the Topic and brief overall of our content</td>
+              <td>Social Media</td>
+              <td>What is Social Media to a person?</td>
               <td>10 minutes</td>
               <td>Facecam</td>
               <td>Video/Audio</td>
             </tr>
             <tr>
-              <td>Roots of Dilemma of Teenagers</td>
-              <td>Discussion of the Roots and Problems of Teenagers</td>
-              <td>5 minutes</td>
-              <td>Facecam</td>
-              <td>Video/Audio</td>
-            </tr>
-            <tr>
-              <td>Effects of Dilemmas of Teenagers</td>
-              <td>Disucssion about the effects while also explaining how this affects Teenagers</td>
+              <td>Effects of Social Media <br>to a Person</td>
+              <td>The Positive effects and Negative Effects
+              </td>
               <td>10 minutes</td>
               <td>Facecam</td>
               <td>Video/Audio</td>
             </tr>
             <tr>
-              <td>Types of Dilemmas of a Teenager</td>
-              <td>Discussion about the different types of Dilemmas of a Teenager</td>
-              <td>5 minutes</td>
+              <td>Impact of Social Media to a Person</td>
+              <td>Why does social media affect a person's self view on his/herself???</td>
+              <td>10 minutes</td>
               <td>Facecam</td>
               <td>Video/Audio</td>
             </tr>
@@ -192,35 +192,30 @@
               <td>Music Audio</td>
             </tr>
             <tr>
-              <td>Real life and Online Experiences based on their Problems and Experiences</td>
-              <td>Discussion and sharing of how these problems affect them Real Life and Online and their difference
-              </td>
-              <td>12 minutes</td>
-              <td>Facecam</td>
-              <td>Video/Audio</td>
-              </td>
-            <tr>
               <td>Summary</td>
-              <td>Summarization of Important Details</td>
+              <td>Summarization of Important Details
+              </td>
               <td>10 minutes</td>
               <td>Facecam</td>
               <td>Video/Audio</td>
               </td>
             <tr>
-              <td>Q&A</td>
               <td>Q&A Portion</td>
-              <td>10 minutes</td>
+              <td>Interacting with the audience</td>
+              <td>5 minutes</td>
               <td>Facecam</td>
               <td>Video/Audio</td>
               </td>
             <tr>
               <td>Outroduction</td>
-              <td>Giving thanks to the viewers and Outro</td>
-              <td>2 minutes</td>
-              <td>Picture</td>
-              <td>Video/Audio</td>
-
+              <td>Giving thanks to the viewers and outro</td>
+              <td>5 minutes</td>
+              <td>Facecam</td>
+              <td>Video/Audio</td> 
+              </td>
           </table>
+          </center>
+        
           <br>
         </div>
 
