--- a/pricing.html
+++ b/pricing.html
@@ -139,8 +139,8 @@
       <div class="container">
         <div class="text-center">
           <center><table class="center">
-          <h2><strong>Outline</strong> of the Stream</h2>
-           
+          <h2><strong>Outline</strong> of the Streams</h2>
+          <p>This outline is all about the Solstice's 1st livestream wherein it discusses about the Issues of Social Media and Self-Esteem.</p> 
             <tr>
               <th>Topic</th>
               <th>Activity</th>
@@ -215,7 +215,79 @@
               </td>
           </table>
           </center>
-        
+
+          <br>
+          <br>
+          <br>
+
+          <center><table class="center">
+           <p>This outline is about Solstice's 2nd stream about the "Ano ang Kwentong High School mo?"</p> 
+          <tr>
+            <th>Topic</th>
+            <th>Activity</th>
+            <th>Time Allotment (mins)</th>
+            <th>Screen</th>
+            <th>Audio</th>
+          </tr>
+          <tr>
+            <td>Intermission</td>
+            <td>Introduction</td>
+            <td>3 minutes</td>
+            <td>Picture</td>
+            <td>Audio</td>
+          </tr>
+          <tr>
+            <td>Life changes of Teenagers</td>
+            <td>Introduction of the Group and Topic<br>with hook as well as a mini-game</td>
+            <td>10 minutes</td>
+            <td>Facecam</td>
+            <td>Video/Audio</td>
+          </tr>
+          <tr>
+            <td>Timeline of my High School Years</td>
+            <td>What is your High School life life?<br><strong>(Freshmen year, Pre-Pandemic, and Present Time)</strong></td>
+            <td>10 minutes</td>
+            <td>Facecam</td>
+            <td>Video/Audio</td>
+          </tr>
+          <tr>
+            <td>What are my Before and After<br>Perspective of my High School Days</td>
+            <td>Impacts of Realization to a teenager <br><strong>(Physiclal Impact, Emotional Impacts, and Mental Impacts</strong></td>
+            <td>10 minutes</td>
+            <td>Facecam</td>
+            <td>Video/Audio</td>
+          </tr>
+          <tr>
+            <td>Comercial Breaktime</td>
+            <td>Breaktime</td>
+            <td>5 minutes</td>
+            <td>Picture</td>
+            <td>Audio</td>
+          </tr>
+          <tr>
+            <td>Relating to other <br> High School Experiences</td>
+            <td>NGL Link read through memories</td>
+            <td>10 minutes</td>
+            <td>Facecam</td>
+            <td>Video/Audio</td>
+          </tr>
+          <tr>
+            <td>What I have learned through <br> all my High School years</td>
+            <td>Conclusion</td>
+            <td>10 minutes</td>
+            <td>Facecam</td>
+            <td>Video/Audio</td>
+            </td>
+          <tr>
+            <td>Outroduction</td>
+            <td>Q&A Portion, Shoutouts, and Outro</td>
+            <td>5 minutes</td>
+            <td>Facecam</td>
+            <td>Video/Audio</td>
+            </td>
+        </table>
+        </center>
+
           <br>
         </div>
 
